Fixed unreadability of the email

--- a/css/default.less
+++ b/css/default.less
@@ -9,6 +9,9 @@
     background: url('/images/header.jpg');
     padding: 25px 0;
     height: 250px;
+    a, a:hover, a:focus {
+        color: #ffffff;
+    }
 }
 
 .subnav {
